// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correctly with a single expense 1`] = `
<div
  className="content-container page-header"
>
  <h1
    className="page-header__title"
  >
    Viewing 
    <span>
      1
    </span>
     
    expense
     totalling 
    <span>
      £2.75
    </span>
  </h1>
  <div
    className="page_header__actions"
  >
    <Link
      className="button"
      to="/create"
    >
      Add expense
    </Link>
  </div>
</div>
`;

exports[`should render ExpenseSummary correctly with muliple expenses 1`] = `
<div
  className="content-container page-header"
>
  <h1
    className="page-header__title"
  >
    Viewing 
    <span>
      9
    </span>
     
    expenses
     totalling 
    <span>
      £215.78
    </span>
  </h1>
  <div
    className="page_header__actions"
  >
    <Link
      className="button"
      to="/create"
    >
      Add expense
    </Link>
  </div>
</div>
`;

exports[`should render ExpenseSummary correctly with no expenses 1`] = `
<div
  className="content-container page-header"
>
  <h1
    className="page-header__title"
  >
    Viewing 
    <span>
      0
    </span>
     
    expenses
     totalling 
    <span>
      £0.00
    </span>
  </h1>
  <div
    className="page_header__actions"
  >
    <Link
      className="button"
      to="/create"
    >
      Add expense
    </Link>
  </div>
</div>
`;
